--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<h1 class="title">Contact</h1>
 				<ul>
 					<a id="envelope" href="mailto:ganeshkumar.m1996@gmail.com"><li><i class="fa fa-envelope"></i></li></a>
-					<a id="github" href="https://github.com/ganeshmkumar" target="_blank"><li><i class="fa fa-github"></i></li></a>
+					<a id="github" href="https://github.com/ganeshkumarm1" target="_blank"><li><i class="fa fa-github"></i></li></a>
 					<a id="quora" href="https://www.quora.com/profile/GaNeSh-KuMaR-M-4" target="_blank"><li><i class="fa"><strong>Q</strong></i></li></a>
 					<a id="linkedin" href="https://in.linkedin.com/in/ganesh-kumar-m-47b876111" target="_blank"><li><i class="fa fa-linkedin"></i></li></a>
 					<a id="codepen" href="http://codepen.io/ganeshkumarm/pens/public" target="_blank"><li><i class="fa fa-codepen"></i></li></a>
