--- a/index.html
+++ b/index.html
@@ -1,104 +1,135 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>GaneshKumarM-MinimalPortfolioTemplate</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css">
-    	<link rel="stylesheet" href="css/style.css">
 
-    </head>
-    <body>
-        <!--[if lt IE 8]>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>GaneshKumarM-MinimalPortfolioTemplate</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-	<section id="profile" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-				<img class="img img-circle" src="img/ganesh.png" width="200" height="200" alt="GaneshKumarM">
-			</div>
-		</div>
-	</section>
+    <section id="profile" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <img class="img img-circle" src="img/ganesh.png" width="200" height="200" alt="GaneshKumarM">
+            </div>
+        </div>
+    </section>
 
-	<section id="home" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-				<h1 class="title">Ganesh Kumar M</h1>
-				<p>Why be a king when you can be the god</p>
-			</div>
-		</div>
-	</section>
-	
-	<section id="about" class="container-fluid">
-		
-	</section>
+    <section id="home" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="title">Ganesh Kumar M</h1>
+                <p>Why be a king when you can be the god</p>
+            </div>
+        </div>
+    </section>
 
-	<section id="skills" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-				<h1 class="title">Skills</h1>
-				<i class="icon-html5-alt"></i>
-				<i class="icon-css3-alt"></i>
-				<i class="icon-javascript-alt"></i>
-				<i class="icon-bootstrap"></i>
-				<i class="icon-jquery"></i>
-				<i class="icon-nodejs"></i>
-				<i class="icon-mongodb"></i>
-				<i class="icon-python"></i>
-				<i class="icon-git"></i>
-			</div>
-		</div>
-	</section>
+    <section id="about" class="container-fluid">
 
-	<section id="projects" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-				<h1 class="title">Projects</h1>
-				<ul class="col-md-12">
-					<a id="pomodoro-clock" href="https://github.com/ganeshmkumar/PomodoroClock.git" target="_blank"><li>PomodoroClock</li></a>
-					<a id="upvote" href="https://github.com/ganeshmkumar/Upvote.git" target="_blank"><li>Upvote</li></a>
-					<a id="tvfreak" href="https://github.com/ganeshmkumar/TVFreak.git" target="_blank"><li>TVFreak</li></a>
-					<a id="twentyh" href="https://github.com/ganeshmkumar/20H.git" target="_blank"><li>20H</li></a>
-					<a id="notify-me" href="https://github.com/ganeshmkumar/NotifyMe.git" target="_blank"><li>NotifyMe</li></a>
-					<a id="tweet" href="https://github.com/ganeshmkumar/Tweet.git" target="_blank"><li>Tweet</li></a>
-					<a id="wikipedia-viewer" href="https://github.com/ganeshmkumar/WikipediaViewer.git" target="_blank"><li>WikipediaViewer</li></a>
-				</ul>
+    </section>
 
-			</div>
-		</div>
-	</section>
+    <section id="skills" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="title">Skills</h1>
+                <i class="icon-html5-alt"></i>
+                <i class="icon-css3-alt"></i>
+                <i class="icon-javascript-alt"></i>
+                <i class="icon-bootstrap"></i>
+                <i class="icon-jquery"></i>
+                <i class="icon-nodejs"></i>
+                <i class="icon-mongodb"></i>
+                <i class="icon-python"></i>
+                <i class="icon-git"></i>
+            </div>
+        </div>
+    </section>
 
-	<section id="contact" class="container-fluid">
-		<div class="row col-md-12">
-			<div class="col-md-12">
-				<h1 class="title">Contact</h1>
-				<ul>
-					<a id="envelope" href="mailto:ganeshkumar.m1996@gmail.com"><li><i class="fa fa-envelope"></i></li></a>
-					<a id="github" href="https://github.com/ganeshkumarm1" target="_blank"><li><i class="fa fa-github"></i></li></a>
-					<a id="quora" href="https://www.quora.com/profile/GaNeSh-KuMaR-M-4" target="_blank"><li><i class="fa"><strong>Q</strong></i></li></a>
-					<a id="linkedin" href="https://in.linkedin.com/in/ganesh-kumar-m-47b876111" target="_blank"><li><i class="fa fa-linkedin"></i></li></a>
-					<a id="codepen" href="http://codepen.io/ganeshkumarm/pens/public" target="_blank"><li><i class="fa fa-codepen"></i></li></a>
-				</ul>
-			</div>
-		</div>
-	</section>
+    <section id="projects" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="title">Projects</h1>
+                <ul class="col-md-12">
+                    <a id="pomodoro-clock" href="https://github.com/ganeshmkumar/PomodoroClock.git" target="_blank">
+                        <li>PomodoroClock</li>
+                    </a>
+                    <a id="upvote" href="https://github.com/ganeshmkumar/Upvote.git" target="_blank">
+                        <li>Upvote</li>
+                    </a>
+                    <a id="tvfreak" href="https://github.com/ganeshmkumar/TVFreak.git" target="_blank">
+                        <li>TVFreak</li>
+                    </a>
+                    <a id="twentyh" href="https://github.com/ganeshmkumar/20H.git" target="_blank">
+                        <li>20H</li>
+                    </a>
+                    <a id="notify-me" href="https://github.com/ganeshmkumar/NotifyMe.git" target="_blank">
+                        <li>NotifyMe</li>
+                    </a>
+                    <a id="tweet" href="https://github.com/ganeshmkumar/Tweet.git" target="_blank">
+                        <li>Tweet</li>
+                    </a>
+                    <a id="wikipedia-viewer" href="https://github.com/ganeshmkumar/WikipediaViewer.git" target="_blank">
+                        <li>WikipediaViewer</li>
+                    </a>
+                </ul>
 
-	<section id="navigate" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-				<i id="prev" class="fa fa-angle-left"></i>
-				<i id="next" class="fa fa-angle-right"></i>
-			</div>
-		</div>
-	</section>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="container-fluid">
+        <div class="row col-md-12">
+            <div class="col-md-12">
+                <h1 class="title">Contact</h1>
+                <ul>
+                    <a id="envelope" href="mailto:ganeshkumar.m1996@gmail.com">
+                        <li><i class="fa fa-envelope"></i></li>
+                    </a>
+                    <a id="github" href="https://github.com/ganeshkumarm1" target="_blank">
+                        <li><i class="fa fa-github"></i></li>
+                    </a>
+                    <a id="quora" href="https://www.quora.com/profile/GaNeSh-KuMaR-M-4" target="_blank">
+                        <li><i class="fa"><strong>Q</strong></i></li>
+                    </a>
+                    <a id="linkedin" href="https://in.linkedin.com/in/ganesh-kumar-m-47b876111" target="_blank">
+                        <li><i class="fa fa-linkedin"></i></li>
+                    </a>
+                    <a id="codepen" href="http://codepen.io/ganeshkumarm/pens/public" target="_blank">
+                        <li><i class="fa fa-codepen"></i></li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="navigate" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <i id="prev" class="fa fa-angle-left"></i>
+                <i id="next" class="fa fa-angle-right"></i>
+            </div>
+        </div>
+    </section>
+    <br>
+    <div>
+        <a href="https://www.ganeshkumarm.me" target="_blank" style="color: red; text-decoration: underline; font-weight: bold;">Checkout my new site</a>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
-    </body>
+</body>
+
 </html>
